add convenience function
